--- a/scss/modules/nav/_components.scss
+++ b/scss/modules/nav/_components.scss
@@ -78,7 +78,7 @@
 // Dropdown Components
 // -------------------
 %dropdown-container {
-	display: inline-block;
+	// display: inline-block;
 	overflow: visible;
 }
 
