--- a/scss/modules/animations/_module.scss
+++ b/scss/modules/animations/_module.scss
@@ -16,6 +16,10 @@ $inactive-selector: '.ng-leave' !default;
 $active-z-index: 2 !default;
 $inactive-z-index: 0 !default;
 
+// Transition Settings
+$animation-transition-duration: 0.2s !default;
+$animation-transition-timing-function: ease-in-out !default;
+
 // Imports
 @import
 	'_mixins',
