--- a/scss/modules/global/_mixins.scss
+++ b/scss/modules/global/_mixins.scss
@@ -56,6 +56,17 @@
     }
 }
 
+// Transition Mixin
+@mixin transition(
+    $property: all,
+    $transition-duration: $animation-transition-duration,
+    $transition-timing-function: $animation-transition-timing-function
+) {
+    @include transition-property($property);
+    @include transition-duration($transition-duration);
+    @include transition-timing-function($transition-timing-function);
+}
+
 @mixin translate(
     $horizontal: false,
     $vertical: false
