--- a/scss/modules/animations/_module.scss
+++ b/scss/modules/animations/_module.scss
@@ -9,7 +9,7 @@ $animation-timing-function: ease-in-out !default;
 $animation-perspective: 1000 !default;
 
 // Activation Settings
-$activation-item-selector: '[ui-view]' !default;
+$activation-item-selector: '> [ui-view], > .page' !default;
 $inert-selector: '.inert' !default; 
 $active-selector: '.ng-enter' !default;
 $inactive-selector: '.ng-leave' !default;
