Added shift animations

--- a/docs/views/animations.html
+++ b/docs/views/animations.html
@@ -7,7 +7,7 @@
 </nav>
 <div class="field">
     <select name="component.animations.type" ng-model="component.animations.type">
-        <option value="{{type}}" ng-repeat="type in ['fade','scaleUp','scaleDown','slideUp','slideDown','slideLeft','slideRight','flipLeft']">{{type}}</option>
+        <option value="{{type}}" ng-repeat="type in ['fade','scaleUp','scaleDown','slideUp','slideDown','slideLeft','slideRight','flipLeft','shiftUp','shiftDown','shiftLeft','shiftRight']">{{type}}</option>
     </select>
 </div>
 <div class="row-6">
