--- a/scss/modules/animations/_module.scss
+++ b/scss/modules/animations/_module.scss
@@ -7,6 +7,7 @@ $animation-duration: 0.3s !default;
 $animation-duration-3d: 2s !default;
 $animation-timing-function: ease-in-out !default;
 $animation-perspective: 1000 !default;
+$animation-delta: 5rem !default;
 
 // Activation Settings
 $activation-item-selector: '> [ui-view], > .page' !default;
